# harmony-zed

./: .gitignore  CHANGELOG.md  Cargo.toml  HARMONY_IMPL_SPEC.md  LICENSE  QUICK_START.md  README.md  SETUP_AND_TEST_REPORT.md  STATUS_SUMMARY.md  extension.toml  run-harmony-mcp.cmd  smoke-network.ps1  start-harmony-mcp.bat  test-harmony-overlap.bat  test-harmony-overlap.ps1  test_harmony.ps1
.harmony/: config.toml
crates/harmony-analyzer/: Cargo.toml
crates/harmony-analyzer/src/: impact.rs  lib.rs  lsp_client.rs  treesitter.rs
crates/harmony-core/: Cargo.toml
crates/harmony-core/src/: config.rs  errors.rs  lib.rs  negotiation.rs  overlap.rs  provenance.rs  sandbox.rs  shadow.rs  types.rs
crates/harmony-core/tests/: e2e_golden_path.rs  live_backend_smoke.rs  negotiation_tests.rs  overlap_tests.rs
crates/harmony-extension/: Cargo.toml  extension.toml
crates/harmony-extension/src/: acp.rs  agent_team.rs  config.rs  ghost.rs  hotkeys.rs  ipc.rs  lib.rs  panels.rs  pulse.rs  sidecar.rs
crates/harmony-mcp/: Cargo.toml
crates/harmony-mcp/src/: file_sync.rs  main.rs  tools.rs  tracking.rs  transport.rs  types.rs
crates/harmony-mcp/src/server/: ipc_tcp.rs  mcp_http.rs  mod.rs  web.rs
crates/harmony-memory/: Cargo.toml
crates/harmony-memory/src/: embeddings.rs  lib.rs  schema.rs  store.rs
crates/harmony-memory/tests/: memory_tests.rs
dashboard/: app.js  index.html  style.css
docs/: OVERVIEW.md  PROJECT.md  TESTING.md  USAGE.md
tests/: analyzer_tests.rs  memory_tests.rs  shadow_tests.rs
