[package]
name = "harmony-mcp"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "harmony-mcp"
path = "src/main.rs"

[dependencies]
harmony-core = { path = "../harmony-core" }
harmony-memory = { path = "../harmony-memory" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
local-ip-address = "0.6"
base64 = "0.22"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.10"
